Este es el primer comit del archivo del blogspot

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
     <title>Viernesito codeado</title>
   </head>
   <body>
-    <h1>Aqui vamos hacer un blogspot</h1>
+    <h1>Aqui vamos hacer un blogspot bien aspero</h1>
     <p>Y este es el párrafo de inicio</p>
   </body>
 </html>
