ahora si estoy haciendo los cambios para la inclusión del header

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,14 @@
     <title>Viernesito codeado</title>
   </head>
   <body>
-    <h1>Aqui vamos hacer un blogspot bien aspero</h1>
-    <p>Y este es el párrafo de inicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo pro del post</h1>
+        <p>
+          Y este es el párrafo de inicio donde vamos a ver cositas muy pero muy
+          buenas.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
