--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabcera">Cabecera</div>
       <div id="post">
         <h1>Este es el titulo pro del post</h1>
         <p>
