--- a/blogspot.html
+++ b/blogspot.html
@@ -14,6 +14,7 @@
           Y este es el párrafo de inicio donde vamos a ver cositas muy pero muy
           buenas.
         </p>
+        <p>Los blogs que escribo yo son la verga</p>
       </div>
     </div>
   </body>
