--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="cabecera">
         Hyperblog
-        <span id="tagline">Tu blog de confianza</span>
+        <span id="tagline">Tu blog de maestro</span>
       </div>
       <div id="post">
         <h1>Este es el titulo pro del post</h1>
@@ -19,6 +19,7 @@
           buenas.
         </p>
         <p>Los blogs que escribo yo son la verga</p>
+        <p>suscribete y dale like</p>
       </div>
     </div>
   </body>
