--- a/blogspot.html
+++ b/blogspot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Viernesito codeado</title>
+    <title>Bienvenido a Hyperblog</title>
   </head>
   <body>
     <div id="container">
