hice cambios en el head del archivo

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,17 +9,16 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Hyperblog
+        Hyperblogsaso
         <span id="tagline">Tu blog de cabecera</span>
       </div>
       <div id="post">
         <h1>Este es el titulo pro del post</h1>
         <p>
-          Y este es el párrafo de inicio donde vamos a ver cositas muy pero muy
-          buenas.
+          Y este es el párjajajahay que acuerrgutwebwebrafo de inicio donde
+          vamos a ver cositas muy pero muy buenas.
         </p>
         <p>Los blogs que escribo yo son la verga</p>
-        <p>suscribete y dale like</p>
       </div>
     </div>
   </body>
